Added Docker configuration

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,3 +29,17 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn clean install
+
+    steps:
+      - uses: actions/checkout@v3
+        name: Check out code
+
+      - name: Build & push Docker image
+        uses: mr-smithers-excellent/docker-build-push@v5
+        with:
+          image: surya2507/springoot-githubactions
+          tags: v1, latest
+          registry: docker.io
+          dockerfile: Dockerfile
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
